<resources>
    <string name="app_name">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="Text">Status:- </string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="List">List Paired Devices</string>
    <string name="Find">Search new Devices / Cancel</string>
    <string name="connect">Connect to Controller</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="TextControl">Waiting for controller...</string>
</resources>
